...
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nBK-yS-lig">
                                        <rect key="frame" x="19" y="107" width="216" height="35"/>
                                        <color key="backgroundColor" red="0.027450980390000001" green="0.0" blue="0.59215686270000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" name="Thonburi-Bold" family="Thonburi" pointSize="17"/>
                                        <color key="tintColor" red="0.0" green="0.58823529411764708" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="LOGIN">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
...
                                </prototypes>
                            </tableView>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <viewLayoutGuide key="safeArea" id="lqr-qA-mja"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Fav Posts" id="L8v-XR-r9w"/>
                    <connections>
                        <outlet property="tableView" destination="nB0-BU-k69" id="Q3B-2U-rBF"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="eyH-Td-Yqy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
                                                    <color key="textColor" red="0.027450980390000001" green="0.0" blue="0.59215686270000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FBV-5P-Npk">
                                                    <rect key="frame" x="313" y="0.0" width="80" height="56"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <state key="normal" title="Fav"/>
                                                </button>
                                            </subviews>
                                        </tableViewCellContentView>
                                        <connections>
                                            <outlet property="body" destination="hkR-s6-o4N" id="ehj-m1-ieG"/>
                                            <outlet property="favButton" destination="FBV-5P-Npk" id="3CX-Og-ioZ"/>
...
                            <constraint firstItem="9Wp-Bx-LPc" firstAttribute="bottom" secondItem="XOr-UA-z6T" secondAttribute="bottom" id="Kem-C3-5YH"/>
                            <constraint firstItem="9Wp-Bx-LPc" firstAttribute="leading" secondItem="XOr-UA-z6T" secondAttribute="leading" id="Lac-3j-yKb"/>
                            <constraint firstItem="9Wp-Bx-LPc" firstAttribute="top" secondItem="XOr-UA-z6T" secondAttribute="top" id="XuW-Wa-CqA"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="XOr-UA-z6T"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Posts" id="o9a-Dw-raS"/>
                    <connections>
                        <outlet property="tableView" destination="9Wp-Bx-LPc" id="Ku1-Q9-YOC"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="xSK-7J-Un2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
