...
    
    
    fileprivate func displayAlert() {
        DispatchQueue.main.async {
            self.alert.dismiss(animated: true) {
                self.navigationController!.dismiss(animated: false, completion: nil)
                let alertController = UIAlertController(title: "Login Failed", message: "Please try Bob,Alice,Tom,Andy or Al", preferredStyle: .alert)
                alertController.addAction(UIAlertAction(title: "Cancel", style: UIAlertAction.Style.default, handler: { _ in
                    
                }))
                self.navigationController?.present(alertController, animated: true, completion: nil)
            }
        }
...
